--- a/SourceCode/2023/August2023/Sarath Chandra/Vajrang Basics Task 34/Substraction.xaml
+++ b/SourceCode/2023/August2023/Sarath Chandra/Vajrang Basics Task 34/Substraction.xaml
@@ -81,7 +81,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Assign DisplayName="Minus Logic" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
+    <Assign DisplayName="Substraction Logic" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="x:Int32">[Out_SubResult]</OutArgument>
       </Assign.To>
